test/jsbt/vectors/errors/zero-arg-no-warning/index.js
export const removed = () => {
  throw new Error('removed');
};
